--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="app.js"></script>
     <script type="text/javascript" src="knockout-3.4.0.js"></script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyBYixdJNss4B8FmoYDKJgG5mgr1q1zhRFg&v=3&callback=initializeMap">
+        src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyBYixdJNss4B8FmoYDKJgG5mgr1q1zhRFg&libraries=geometry&v=3&callback=initializeMap">
     </script>
   </body>
 </html>
