--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div id="map"></div>
   </div>
 
-    <script src="app.js"></script>
+
+    <script type="text/javascript" src="jquery-3.1.0.js"></script>
     <script type="text/javascript" src="knockout-3.4.0.js"></script>
+    <script src="app.js"></script>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyBYixdJNss4B8FmoYDKJgG5mgr1q1zhRFg&libraries=geometry&v=3&callback=initializeMap">
     </script>
