--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <title>Street Art Map of Newcastle, Australia</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
   </head>
   <body>
     <div class="container">
         <h1>Newcastle Street Art Map</h1>
+        <p>Newcastle is a harbor city in the Australian state of New South Wales. Its plentiful beaches are linked by the Bathers Way, a coastal walk stretching between Nobbys Beach and Merewether Beach. But not only superb surf beaches, historical architecture and a sun-drenched climate the city is famous for. There is fine dining, hip bars, quirky boutiques, and a diverse arts scene. And it's home to some great street art objects too. Go and explore them!</p>
+
+        <p><input type="search" data-bind="textInput: " placeholder="E.g artist's name"></p>
+
+        <h4>Current locations: <span data-bind=
+          "text: "></span></h4>
+
+
     <div id="map"></div>
   </div>
 
