--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <div class="container">
         <h1>Newcastle Street Art Map</h1>
-        <p>Newcastle is a harbor city in the Australian state of New South Wales. Its plentiful beaches are linked by the Bathers Way, a coastal walk stretching between Nobbys Beach and Merewether Beach. But not only superb surf beaches, historical architecture and a sun-drenched climate the city is famous for. There is fine dining, hip bars, quirky boutiques, and a diverse arts scene. And it's home to some great street art objects too. Go and explore them!</p>
+        <p>Newcastle is a harbor city in the Australian state of New South Wales. Its plentiful beaches are linked by the Bathers Way, a coastal walk stretching between Nobbys Beach and Merewether Beach. But not only superb surf beaches, historical architecture and a sun-drenched climate the city is famous for. There is fine dining, hip bars, quirky boutiques, and a diverse arts scene. And it's home to some great street art too. Go and explore it!</p>
 
         <p><input type="search" data-bind="textInput: searchQuery" placeholder="E.g artist's name"></p>
 
-        <h4>Current locations: <span data-bind=
-          "text: searchQuery"></span></h4>
+        <div><span data-bind=
+          "text: searchQuery"></span></div>
 
 
     <div id="map"></div>
