--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Newcastle Street Art Map</h1>
         <p>Newcastle is a harbor city in the Australian state of New South Wales. Its plentiful beaches are linked by the Bathers Way, a coastal walk stretching between Nobbys Beach and Merewether Beach. But not only superb surf beaches, historical architecture and a sun-drenched climate the city is famous for. There is fine dining, hip bars, quirky boutiques, and a diverse arts scene. And it's home to some great street art too. Go and explore it!</p>
 
-        <p><input type="search" data-bind="textInput: searchQuery" placeholder="E.g artist's name"></p>
+        <p><input type="search" data-bind="textInput: searchQuery" placeholder="Artist's name/artwork location"></p>
 
         <div><span data-bind=
           "text: searchQuery"></span></div>
