--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div>
           <ul data-bind="foreach: selectLocations">
-                     <li data-bind="text: author"></li>
+                     <li data-bind="text: author, click: $parent.listLocationSelected"></li>
                    </ul>
         </div>
 
