Add search by location

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     architecture and a sun-drenched climate the city is famous for. There is fine dining, hip bars, quirky boutiques, and a diverse arts scene. And it's home to some great street art too. Go and explore it!</p>
 
                 <div class="search-bar">
-                    <input class="search-input" type="search" data-bind="textInput: searchQuery" placeholder="Artist's name">
+                    <input class="search-input" type="search" data-bind="textInput: searchQuery" placeholder="artist name/artwork location">
 
                     <div><span class="search-output" data-bind="text: searchQuery"></span>
                     </div>
